# UrbanMor

./: .gitignore  001_init.sql  002_meta_tables.sql  003_indexes.sql  004_unversioned_metric_policy.sql  004_ward_cache.sql  005_custom_cache.sql  MANHATTAN_BUILDINGS_DOWNLOAD_GUIDE.md  METRIC_FORMULA_REVIEW.md  blocking_issues_log.md  building_canonicalization_report.csv  city_readiness_report.md  data_inventory_master.csv  download_manhattan_buildings.py  download_manhattan_buildings_s3.sh  explore_manhattan_buildings.py  ingestion_crs_policy.yaml  metric_coverage_matrix.csv  metric_null_quality_semantics.md  metric_quality_flags.csv  metrics_registry.yaml  package-lock.json  public_transport_routes_extraction_report.csv  qa_prerequisite_layers.sql  qa_raw_layers.sql  render.yaml  reprojection_stage_report.csv  validation_gate_report.md
backend/: .env.example  DEPLOY_RENDER.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_api_request_log.py  (+2 more)
backend/app/: main.py  observability.py
backend/scripts/: calculate_cnr.py  extract_public_transport_routes.py  load_all_available_layers.py  metric_engine.py  profile_query_plans.sh  profile_query_plans.sql  profile_response_targets.sh  redeploy_urbanmorph_from_tunnel.sh  remediate_outputs.py  render_start.sh  run_distribution_and_reference_checks.py  run_ward_cache_refresh.sh
backend/tests/: conftest.py  test_analyse_custom_cache.py  test_contract_endpoints.py  test_health.py  test_metrics_integration.py  test_openapi.py  test_reliability.py
frontend/: README.md  (+3 more)
(+42 files in other folders)
