[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urbanmor-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for UrbanMor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy[asyncio]>=2.0.38,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.15.0,<2.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
